objects/X7S_Shr_Custom_Field_Set_Assignment__mdt/X7S_Shr_Custom_Field_Set_Assignment__mdt.object-meta.xml
<CustomObject>
    <description>Custom field set assignment - relates a custom field to a field set</description>
    <label>7S Shr Custom Field Set Assignment</label>
    <pluralLabel>7S Shr Custom Field Set Assignments</pluralLabel>
</CustomObject>