objects/X7S_Shr_Custom_Field_Set_Assignment__mdt/fields/Label_Icon__c.field-meta.xml
<CustomField>
    <fullName>Label_Icon__c</fullName>
    <inlineHelpText>Enter the Icon name if the Field Label Type is selected as a Icon otherwise enter the Label.</inlineHelpText>
    <label>Label Icon</label>
    <length>80</length>
    <type>Text</type>
</CustomField>