objects/X7S_Shr_Custom_Field_Set_Assignment__mdt/fields/Label_Override__c.field-meta.xml
<CustomField>
    <fullName>Label_Override__c</fullName>
    <inlineHelpText>Override the related field label</inlineHelpText>
    <label>Label Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>