objects/X7S_Shr_Custom_Field_Set_Assignment__mdt/fields/Label_Type__c.field-meta.xml
<CustomField>
    <fullName>Label_Type__c</fullName>
    <inlineHelpText>Select the related field label type</inlineHelpText>
    <label>Label Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Icon</fullName>
                <default>true</default>
                <label>Icon</label>
            </value>
            <value>
                <fullName>Label</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>