objects/X7S_Shr_Custom_Field_Set_Assignment__mdt/fields/Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Placeholder__c</fullName>
    <inlineHelpText>Placeholder text that will appear in the field to provide data entry guidance</inlineHelpText>
    <label>Entry Text Placeholder</label>
    <length>80</length>
    <type>Text</type>
</CustomField>