objects/X7S_Shr_Custom_Field_Set_Assignment__mdt/fields/X7S_Shr_Custom_Field__c.field-meta.xml
<CustomField>
    <fullName>X7S_Shr_Custom_Field__c</fullName>
    <inlineHelpText>Custom field to relate to the field set</inlineHelpText>
    <label>7S Shr Custom Field</label>
    <referenceTo>X7S_Shr_Custom_Field__mdt</referenceTo>
    <relationshipName>X7S_Shr_Custom_Field_Set_Assignments</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>