objects/X7S_Shr_Custom_Field_Set_Assignment__mdt/fields/X7S_Shr_Custom_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>X7S_Shr_Custom_Field_Set__c</fullName>
    <inlineHelpText>Custom field set</inlineHelpText>
    <label>7S Shr Custom Field Set</label>
    <referenceTo>X7S_Shr_Custom_Field_Set__mdt</referenceTo>
    <relationshipName>X7S_Shr_Custom_Field_Set</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>